--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -30,7 +30,7 @@
 	<properties>
 	<java.version>17</java.version>
 	<spring-cloud.version>2024.0.0</spring-cloud.version>
-		<org.mapstruct.version>1.6.2</org.mapstruct.version>
+		<org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
      </properties>
 
 	<dependencies>
